# nn_exploring

./: .gitignore  ADAPTIVE_THRESHOLD_RESULTS.md  AGENTS.md  BASELINE_COMPARISON.md  BUILD_TROUBLESHOOTING.md  CLAUDE.md  Cargo.toml  DIMENSIONALITY_SCALING.md  FELLNER_SCHALL_THEORY_NOTES.md  GRADIENT_CATASTROPHE_FIXED.md  GRADIENT_CATASTROPHE_INVESTIGATION.md  INVESTIGATION_SUMMARY.md  LAMBDA_OVERFIT_INVESTIGATION.md  MULTIDIMENSIONAL_PERFORMANCE.md  MULTIDIMENSIONAL_SUMMARY.md  MULTIDIM_FIXES_SUMMARY.md  MULTIDIM_VS_MGCV.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  PENALTY_INVESTIGATION_SUMMARY.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_IMPROVEMENTS.md  PHASE5_HESSIAN_PRECOMPUTATION.md  PUBLISHING.md  PYTHON_USAGE.md  README.md  REML_ITERATION_INVESTIGATION.md  REML_VERIFICATION_SUMMARY.md  SESSION_SUMMARY.md  SP_PARAMETERIZATION_FINDINGS.md  STABLE_BASELINE.md  VERIFICATION_SUMMARY.md  benchmark_multidim.py  benchmark_multidim_scaling.py  benchmark_multivariable_mgcv.marimo.py  check_mgcv_basis_values.R  check_mgcv_basis_values2.R  check_mgcv_gradient_formula.R  (+47 more)
.cargo/: config.toml
.github/workflows/: benchmark-vs-r.yml  release.yml  test-build.yml
benches/: benchmark_components.rs  benchmark_comprehensive.rs  benchmark_gam_e2e.rs  benchmark_rust_comprehensive.rs  benchmark_rust_performance.rs  profile_full.rs  profile_gradient.rs  profile_n5000.rs
data/mgcv_rust_lapack_failures/: README.md
data/sale_price_fixtures/: entire_dataset_train.parquet  split_0_train.parquet  split_1_train.parquet  split_2_train.parquet  split_3_train.parquet  split_4_train.parquet
docs/: B4_DESIGN.md  DISCRETE_BINNING_DESIGN.md  GETTING_STARTED.md  JOINT_OUTER_NEWTON_DESIGN.md  MGCV_BAM_ALGORITHM_INVESTIGATION.md  NEIGHBOURHOODS_INTEGRATION_GAPS.md  OCAT_DESIGN.md  PARAMETRIC_TERMS_DESIGN.md  PATH_B_FREML_PLAN.md  PYTHON_USAGE_LEGACY.md  SELECT_TRUE_DESIGN.md  SMOOTH_NEWTON_DISCRETE_PLAN.md  qgam_oos_presets.md
docs/archive/: CORRECTNESS_VERIFICATION_REPORT.md  EXPERIMENT_SUMMARY.md  MGCV_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_FIX_SUMMARY.md
examples/: debug_multidim.rs  debug_reml.rs  investigate_lambda.rs  lambda_comparison.rs  noisy_gam.rs  test_agreement.rs  test_edf_comparison.rs  test_edf_extreme.rs  test_reml_opt.rs
mgcv-rs/: Cargo.toml  DEVELOPMENT.md  README.md
mgcv-rs/src/: basis.rs  errors.rs  family.rs  gam.rs  gcv.rs  lib.rs  linalg.rs  main.rs  reml.rs  smooth.rs
mgcv-rs/tests/: integration_tests.rs
python/mgcv_rust/: __init__.py  _fitter.py  _low_level.py  _predictor.py  _quantile.py  _shash.py
scripts/: validate.sh
scripts/python/: bench_binning_baseline.py  bench_comprehensive.py  bench_fs_vs_newton.py  bench_quantile_oos.py  bench_step_blend.py  generate_comparison_plot.py  generate_parity_fixtures.py  validate_correctness.py  validate_performance.py
scripts/r/: generate_parity_fixtures.R
src/: basis.rs  block_penalty.rs  blockwise_qr.rs  chunked_qr.rs  discrete.rs  family_theta.rs  gam.rs  gam_optimized.rs  gam_parallel.rs  lib.rs  linalg.rs  link.rs  newton_optimizer.rs  ocat.rs  penalty.rs  pirls.rs  reml.rs  reml.rs.bak  reml_optimized.rs  reparam.rs  smooth.rs  utils.rs
src/reml/: fastreml.rs  mod.rs  search_vector.rs  system.rs  tk_kkt.rs
standalone_tests/: README.md  bench_high_d.py  bench_vs_r.py  benchmark_rust_only.py  comprehensive_benchmark.py  profile_scaling.py  quick_benchmark.py  test_extreme_dims.py  test_fs_small_n.py  test_mixed_k.py  validate_correctness.py  validate_performance.py
standalone_tests/fixtures/: correctness_fixtures.json
test_data/: discrete_binning_parity_production.json  discrete_binning_parity_synthetic.json  gaussian_phi_joint_parity.json  gaussian_phi_joint_parity.rds  ocat_parity_basic.json  parametric_parity_n300.json  performance_baseline_blas.json  qgam_elf_contracts.json  qgam_err_co_contract.json  qgam_fixed_elf_fit_contract.json  qgam_fs_step_terms_contract.json  qgam_gaussian_init_contract.json  qgam_holdout_pinball_contract.json  qgam_oos_real_contracts.json  sale_price_entire_dataset_gaussian_parity.json  select_parity_basic.json
tests/: test_binomial_gradient_reference.rs  test_blas_solve.rs  test_cached_gradient.rs  test_cholesky_gradient.rs  test_cholesky_stability.rs  test_d8_n5000_rust.rs  test_discrete_binning_e2e.rs  test_discrete_tdist_pirls.rs  test_edge_correct.rs  test_family_theta_unit.rs  test_fastreml_driver.rs  test_fastreml_unit.rs  test_fully_cached.rs  test_hessian_at_fixed_lambda.rs  test_high_d.rs  test_ndarray_linalg.rs  test_newton_reml.rs  test_ocat_parity_basic.rs  test_quantile_lss_rust.rs  test_reparam_closed_form.rs  test_rust_different_params.rs  test_rust_gradient.rs  test_sigma_chain_reference.rs  test_simple_blas.rs  test_tk_kkt_hessian.rs  test_tk_kkt_hessian_analytical.rs  test_tk_kkt_reference.rs  test_tolerance.rs
tests/ergonomics/: test_auto_k.py  test_auto_k_opt_in.py  test_edf_user_names.py  test_gam_fitter.py  test_gam_predictor.py  test_low_level_gam_facade.py  test_min_k_clamp_warning.py  test_n9_followups.py  test_parametric_terms.py  test_pc_anchoring.py  test_per_smooth_edf.py  test_predict_ci_new_api.py  test_predict_diff.py  test_predict_scale_and_terms.py  test_quantile_eval.py  test_quantile_family.py  test_quantile_high_entropy.py  test_quantile_lss.py  test_quantile_lss_parity.py  test_quantile_qgam_contracts.py  test_random_effects.py  test_rare_events_binomial.py  test_sample_weights.py  test_scat_laml_progress.py  test_scat_parity.py  test_subset_predict.py  test_tdist_family.py  test_tweedie_nb_laml_progress.py  test_weighted_scat.py
tests/fixtures/: binomial_gradient_reference.rs.fragment  tk_kkt_reference.rs.fragment
tests/parity/: README.md  build_input_stubs.py  cases.py  conftest.py  perf_budgets.json  results.json  results.md  schema.py  test_edge_correct.py  test_extrapolation_slices.py  test_glm_regression.py  test_gradient.py  test_invgauss_regression.py  test_parity.py  test_parity_freml.py  test_perf.py  test_stages.py  test_tk_hess.py  test_tk_hess_fd.py
(+217 files in other folders)
