[package]
name = "mgcv_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mgcv_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16"
approx = "0.5"
thiserror = "2.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
ndarray-linalg = { version = "0.17", optional = true, features = ["openblas-system"] }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]
blas = ["ndarray-linalg", "rand", "rand_chacha"]  # Enable optimized BLAS/LAPACK backend

[dev-dependencies]
approx = "0.5"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
# Aggressive optimization flags for maximum performance
opt-level = 3              # Maximum optimization
lto = "fat"                # Link-time optimization across all crates
codegen-units = 1          # Better optimization at cost of compile time
panic = "abort"            # Smaller binaries, slightly faster
strip = true               # Strip symbols for smaller binaries

# Enable CPU-specific optimizations (requires nightly or RUSTFLAGS)
# To use: RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.dev]
opt-level = 1              # Some optimization in dev mode for faster iteration

[[example]]
name = "test_blas_api"
path = "test_ndarray_linalg_api.rs"
required-features = ["blas"]

[[bin]]
name = "bench_solve"
path = "benches/bench_solve.rs"

[[bin]]
name = "test_batch_solve"
path = "test_batch_solve.rs"
required-features = ["blas"]

[[bin]]
name = "profile_gradient"
path = "profile_gradient.rs"
required-features = ["blas"]

[[bin]]
name = "debug_cholesky"
path = "debug_cholesky.rs"
required-features = ["blas"]

[[bin]]
name = "test_batch_trace"
path = "test_batch_trace.rs"
required-features = ["blas"]
