[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mgcv-rust"
version = "0.1.0"
description = "Rust implementation of Generalized Additive Models with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Aleksander Jaworski", email = "ale.jaworski@gmail.com" }
]
keywords = ["statistics", "machine-learning", "gam", "regression", "splines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/AlekJaworski/nn_exploring"
Repository = "https://github.com/AlekJaworski/nn_exploring"
Issues = "https://github.com/AlekJaworski/nn_exploring/issues"

[tool.maturin]
# For PyPI releases: use static-blas feature (bundles OpenBLAS, no system deps)
# For development: use `maturin develop` which uses system OpenBLAS (faster)
features = ["python", "blas", "static-blas"]
module-name = "mgcv_rust"
