[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mgcv-rust"
version = "0.4.0"
description = "Rust implementation of Generalized Additive Models with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Aleksander Jaworski", email = "ale.jaworski@gmail.com" }
]
keywords = ["statistics", "machine-learning", "gam", "regression", "splines"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/AlekJaworski/nn_exploring"
Repository = "https://github.com/AlekJaworski/nn_exploring"
Issues = "https://github.com/AlekJaworski/nn_exploring/issues"

[tool.maturin]
# For local development: uses system OpenBLAS (requires libopenblas-dev or openblas-devel)
# For release builds: CI overrides with --features python,blas,blas-static
features = ["python", "blas", "blas-system"]
module-name = "mgcv_rust"
